# KMDS

./: .buildinfo  .gitignore  .readthedocs.yaml  Changelog.md  README.md  example_ml_modelling_phase_ms.ipynb  index.html  kmds.ontology.html  kmds.tagging.html  modules.html  py-modindex.html  pyproject.toml  requirements.txt  searchindex.js
.doctrees/: environment.pickle  index.doctree  kmds.doctree  kmds.ontology.doctree  kmds.pipelines.doctree  kmds.tagging.doctree  kmds.utils.doctree  modules.doctree
.github/workflows/: jekyll-gh-pages.yml
_sources/: index.rst.txt  kmds.rst.txt
build_instructions/: build_instructions.md
data/: example_ml_kb_exp_workflow.xml  itsm_raw.parquet  online_retail_Q1_Q2_2010.parquet  online_retail_Q2_2010.parquet  retail_q1_sales_2010_summary.csv  test_kb_app_workflow  test_kb_app_workflow.xml  test_kb_exp_workflow  test_kb_exp_workflow.xml
docker_files/: minio-compose.yml  minio.env  minio_env_.example
docs/: .readthedocs.yaml  CITATION.cff  Makefile  conf.py  index.rst  kmds.ontology.rst  requirements.txt
docs/source/: cloud_read_write.rst  concepts.rst  conf.py  index.rst  install.rst  kmds.pipelines.rst  kmds.tagging.rst  kmds.utils.rst  (+2 more)
examples_of_use/: .gitignore  connection_notes.md  workflow_recipe.md
feature_documentation/: glossary_observation_types.md  km_app_pipeline.md  knowledge_management_in_DS.md  ontology_management.md  workflow_recipe.md
images/: km_process_sequence.drawio  kmds_overview.drawio
kmds/: knowledge_base_data_loader.py  meta_data_logger.py
tests/: test_knowledge_app_worfkflow.py
(+91 files in other folders)
