[tool.poetry]
name = "kmds"
version = "0.2.16"
description = "This is a package that helps data scientists and data analysts to capture notes while they work through data science tasks. The captured tasks can then be searched and analyzed."
authors = ["Rajiv Sambasivan <rajiv.sambasivan@r2-ds.com>"]
license = "Apache 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
owlready2 = "^0.45"
rdflib = "^7.0.0"
Flask = "^3.0.2"
pytest = "^8.0.0"
PyYAML = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "default"
url = "https://test.pypi.org/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

